examples/backend/k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-api
spec:
  selector: { app: backend-api }
  ports:
    - name: http
      port: 80
      targetPort: http
